--- a/nginx.conf
+++ b/nginx.conf
@@ -42,7 +42,7 @@ http {
 
     location ~ \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass unix:/home/container/nginx/php8.0-fpm.sock;
+        fastcgi_pass unix:/home/container/php8.0-fpm.sock;
         fastcgi_index index.php;
         fastcgi_param PHP_VALUE "upload_max_filesize = 100M \n post_max_size=100M";
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
