Modified nginx.conf to add support of fastcgi

--- a/nginx.conf
+++ b/nginx.conf
@@ -30,10 +30,6 @@ http {
       root /home/container/public;
       index index.html index.htm index.php;
 
-      location / {
-          try_files $uri $uri/ /index.php?$query_string;
-      }
-
     # allow larger file uploads and longer script runtimes
     client_max_body_size 100m;
     client_body_timeout 120s;
@@ -53,6 +49,7 @@ http {
         fastcgi_connect_timeout 300;
         fastcgi_send_timeout 300;
         fastcgi_read_timeout 300;
+        include /opt/fastcgi_params;
     }
 
     location ~ /\.ht {
